--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,5 +1,8 @@
 #homeWrapper {
     padding: 16px;
+    display: grid;
+    grid-template-columns: repeat(7 , 1fr);
+    gap: 16px;
 }
 
 .card {
@@ -9,14 +12,19 @@
     box-shadow: 0px 2px 4px 0px #9b9b9b;
     overflow: hidden;
     font-size: 12px;
+    cursor: pointer;
 }
 
 .moviePic {
     width: 200px;
     height: 200px;
     background-color: #444;
+    overflow: hidden;
 }
-
+.moviePic>img{
+    width: 200px;
+    aspect-ratio: 3/4;
+}
 .detailWrapper {
     padding-inline: 4px;    
 }
@@ -25,4 +33,7 @@
   align-items: center;
   justify-content: space-between; 
   padding-block: 4px; 
+}
+.detailWrapper>p{
+    font-size: 12px;
 }
